# QT6Projemplate

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  quick的shared项目记录.md
res/: res.qrc
res/qmls/: DetailsDlg.qml  MessageLabel.qml  alarms.qml  clock.qml  component.qml  listview.qml  main.qml  modelview.qml  quicktableview.qml  scripttut.qml  signal.qml
res/qmlsnowin/: R1.qml  R2.qml  R3.qml
src/: CMakeLists.txt
src/apps/LauncherCpp/: CMakeLists.txt  examplepage.cpp  examplepage.h  launcheritemwidget.cpp  launcheritemwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
src/apps/demo/: CMakeLists.txt  main.cpp
src/apps/listview/: CMakeLists.txt  main.cpp
src/apps/modelview/: CMakeLists.txt  main.cpp
src/apps/quicktableview/: CMakeLists.txt  main.cpp  studentmodel.cpp  studentmodel.h
src/apps/thread/: CMakeLists.txt  main.cpp  myprocess.cpp  myprocess.h  myworker.cpp  myworker.h  widget.cpp  widget.h
src/apps/ui/: CMakeLists.txt  main.cpp  mylogin.cpp  mylogin.h  mylogin.ui  myrect.cpp  myrect.h  res.qrc  tab.ui
src/modules/mydll/: CMakeLists.txt  mywidget.cpp  mywidget.h
src/utils/: CMakeLists.txt  myclock.cpp  myclock.h
